// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnSelector NOT Read-only Loads and renders column names 1`] = `
<ColumnSelector
  getColNames={[Function]}
  isReadOnly={false}
  revision={101}
  saveState={[Function]}
  selectedCols="foo,bar,baz"
>
  <div
    className="container list-wrapper"
  >
    <div
      className="row list-scroll"
    >
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={true}
          data-name="foo"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="t-d-gray checkbox-content content-3"
        >
          foo
        </span>
      </div>
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={true}
          data-name="bar"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="t-d-gray checkbox-content content-3"
        >
          bar
        </span>
      </div>
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={true}
          data-name="baz"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="t-d-gray checkbox-content content-3"
        >
          baz
        </span>
      </div>
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={false}
          data-name="wow"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="t-d-gray checkbox-content content-3"
        >
          wow
        </span>
      </div>
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={false}
          data-name="word wrap"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="t-d-gray checkbox-content content-3"
        >
          word wrap
        </span>
      </div>
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={false}
          data-name="ok then"
          disabled={false}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="t-d-gray checkbox-content content-3"
        >
          ok then
        </span>
      </div>
    </div>
  </div>
</ColumnSelector>
`;

exports[`ColumnSelector Read-only Loads and renders disabled column names 1`] = `
<ColumnSelector
  getColNames={[Function]}
  isReadOnly={true}
  revision={101}
  saveState={[Function]}
  selectedCols="foo,bar,baz"
>
  <div
    className="container list-wrapper"
  >
    <div
      className="row list-scroll"
    >
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={true}
          data-name="foo"
          disabled={true}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="t-d-gray checkbox-content content-3"
        >
          foo
        </span>
      </div>
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={true}
          data-name="bar"
          disabled={true}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="t-d-gray checkbox-content content-3"
        >
          bar
        </span>
      </div>
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={true}
          data-name="baz"
          disabled={true}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="t-d-gray checkbox-content content-3"
        >
          baz
        </span>
      </div>
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={false}
          data-name="wow"
          disabled={true}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="t-d-gray checkbox-content content-3"
        >
          wow
        </span>
      </div>
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={false}
          data-name="word wrap"
          disabled={true}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="t-d-gray checkbox-content content-3"
        >
          word wrap
        </span>
      </div>
      <div
        className="checkbox-container"
        style={
          Object {
            "whiteSpace": "nowrap",
          }
        }
      >
        <input
          checked={false}
          data-name="ok then"
          disabled={true}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="t-d-gray checkbox-content content-3"
        >
          ok then
        </span>
      </div>
    </div>
  </div>
</ColumnSelector>
`;
